<resources>
    <string name="app_name">Obstare 1.0</string>
    <string name="title_activity_calcula_dum">Cálculo DUM</string>
    <string name="title_activity_calcula_usg">Cálculo USG</string>
    <string name="title_activity_calcula_imc">Cálculo IMC</string>
    <string name="title_activity_calcula_bishop">Cálculo BISHOP</string>
    <string name="titulo_calculo_dum_e_usg">INFORME A DATA</string>
    <string name="logo_app">LOGOAPP</string>
    <string name="ig_por_dum">IG por DUM</string>
    <string name="ig_por_usg">IG por USG</string>
    <string name="imc_para_gestantes">IMC PARA GESTANTES</string>
    <string name="indice_de_bishop">INDICE DE BISHOP</string>
    <string name="btn_calendario">Botão calendário</string>
    <string name="titulo_dum">DUM (Data da última menstruação):</string>
    <string name="titulo_concepcao">DPC (Data provável de concepção):</string>
    <string name="titulo_dpp">DPP (Data provável do parto):</string>
    <string name="ig_idade_gestacional">IG (Idade Gestacional):</string>
    <string name="btn_salvar_paciente">Salvar paciente</string>
    <string name="btn_calcular">Calcular</string>
    <string name="ig_resultado"></string>
    <string name="titulo_ig_idade_gestacional_do_ultrasom">IG (Idade Gestacional) do Ultrasom:</string>
    <string name="titulo_data_do_ultrasom">Data do ultrasom:</string>
    <string name="retorno_semanas_ultrasom">_</string>
    <string name="titulo_semanas_ultrasom">sem.</string>
    <string name="titulo_dias_ultrasom">dia(s)</string>
    <string name="retorno_dias_ultrasom">_</string>
    <string name="btn_dias_ultrasom">TODO</string>
    <string name="btn_semanas_ultrasom">TODO</string>
    <string name="ig_sem">IG</string>
    <string name="resultado">_</string>
    <string name="titulo_imc_peso">Peso</string>
    <string name="titulo_imc_altura">Altura</string>
    <string name="btn_peso">botão peso</string>
    <string name="btn_altura">botão altura</string>
    <string name="btn_ig_semanas">botão ig semanas</string>
    <string name="titulo_imc_resultado">IMC (ÍNDICE DE MASSA CORPORAL):</string>
    <string name="kg">kg</string>
    <string name="metros">m</string>
    <string name="semanas">sem.</string>
    <string name="faixa_imc">FAIXA IMC</string>
    <string name="peso_caps">PESO</string>
    <string name="abaixo_do_peso">Abaixo do peso</string>
    <string name="peso_ideal">Peso ideal</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="obesidade">Obesidade</string>
    <string name="titulo_resultado">RESULTADO</string>
    <string name="resultado2">-</string>
    <string-array name="op1">
        <item>0</item>
        <item>1-2 cm</item>
        <item>3-4 cm</item>
        <item>5 cm</item>
    </string-array>
    <string-array name="op2">
        <item>-3</item>
        <item>-2</item>
        <item>-1/0</item>
        <item>+1</item>
    </string-array>
    <string-array name="op3">
        <item>0-30%</item>
        <item>40-50%</item>
        <item>60-70%</item>
        <item>80%</item>
    </string-array>
    <string-array name="op4">
        <item>firme</item>
        <item>imtermediário</item>
        <item>Amolecido</item>
    </string-array>
    <string-array name="op5">
        <item>posterior</item>
        <item>imtermediária</item>
        <item>anterior</item>
    </string-array>

</resources>
